refactor(back-end): standardize errors on each users route
